--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v4.0"></script>
 
-    <div class="container-fluid" style="height: 100%">
-        <div class="row no-gutters" style="height: 15%">
+    <div class="container-fluid" style="height: 100vh">
+        <div class="row bg-secondary text-white" style="height:15%">
             <!--<picture>-->
             <!--<source media="(max-width: 380px)" srcset="https://pollena.com.pl/5840-thickbox_default/bialy-jelen-mydlo-naturalne-w-kostce-szare-mydlo-150-g.jpg">-->
             <!--<source media="(max-width: 640px)" srcset="https://pl.rc-cdn.community.thermomix.com/recipeimage/qvyrc1sp-49549-783269-cfcd2-2uzub23h/1aa47b35-b705-4e2f-83a9-89b2c6a98f4d/medium/powidla-sliwkowe.jpg">-->
@@ -32,29 +32,32 @@
             Projekt z przedmiotu Aplikacje Internetowe</br>
             Marcin Służałek
         </div>
-        <div class="row h-70 no-gutters" style="height: 70%">
-            <div class="col-2">
-                <ul>
-                    <li><a href="element_inercyjny.html">Symulator odpowiedzi skokowej</a></li>
-                    <li><a href="grafika_wektorowa.html">Grafika wektorowa</a></li>
-                    <li><a href="animacja.html">Animacja</a></li>
-                    <li><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></li>
-                </ul>
+        <div class="row" style="height:70%">
+            <div class="col-2 bg-light text-dark">
+                <button type="button" class="btn btn-dark btn-block"><a href="element_inercyjny.html">Symulator odpowiedzi skokowej</a></button>
+                <button type="button" class="btn btn-dark btn-block"><a href="grafika_wektorowa.html">Grafika wektorowa</a></button>
+                <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
+                <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
             </div>
             <div class="col-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nibh felis, gravida eu mattis nec, posuere interdum libero. Nullam volutpat, quam nec eleifend maximus, massa quam sodales odio, nec molestie ipsum quam ac nisl. Praesent maximus aliquam lorem ut molestie. Morbi nec mattis nulla, vel porta erat. Fusce urna mauris, tristique at suscipit et, faucibus nec nulla. Duis sed est sed purus convallis placerat a semper ligula. Donec rutrum non nulla eget tempus.</p>
 
                 <p>Pellentesque fringilla malesuada mattis. Proin ut aliquet justo. Quisque sagittis mauris diam, ac accumsan risus bibendum sit amet. Mauris et massa augue. Sed laoreet nec mauris id sodales. Maecenas ac consectetur mi. Fusce bibendum et purus vitae fermentum. Phasellus placerat sit amet turpis vitae efficitur. Cras sodales aliquam sem ut ullamcorper. Sed venenatis justo nec felis sodales, sit amet accumsan sem tempus. Maecenas orci diam, tincidunt vitae urna eu, egestas lobortis tortor. Vivamus at tortor ac libero bibendum cursus et sed arcu. Nunc tempus mattis dui, quis convallis augue laoreet et. Sed lacinia dui tortor, id posuere libero viverra eget. Sed ex neque, interdum sed semper a, commodo eu nisl. Maecenas in maximus nisl, in egestas lectus.</p>
             </div>
-            <div class="col-2">
+            <div class="col-2 bg-light text-dark">
                 <img src="pp-put_logo_jasne.jpg">
             </div>
         </div>
-        <div class="row no-gutters" style="height: 15%">
-            <div class="fb-page" data-href="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/" data-tabs="timeline" data-width="500" data-height="150" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                <blockquote cite="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/" class="fb-xfbml-parse-ignore">
-                    <a href="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/">Klub Żeglarski Politechniki Poznańskiej</a>
-                </blockquote>
+        <div class="row bg-secondary text-white text-center" style="height:15%">
+            <div class="col-6">
+
+            </div>
+            <div class="col-6 text-right">
+                <div class="fb-page" data-href="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/" data-tabs="timeline" data-width="500" data-height="120" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                    <blockquote cite="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/" class="fb-xfbml-parse-ignore">
+                        <a href="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/">Klub Żeglarski Politechniki Poznańskiej</a>
+                    </blockquote>
+                </div>
             </div>
         </div>
     </div>
