Ło pierunie, ile nowych ficzyrów! Drag&Drop, responsywność, poprawiony sym. odp. skokowej i przymiarka pod Insta, to na pewno

--- a/animacja.html
+++ b/animacja.html
@@ -27,7 +27,6 @@
 
 
 
-    <div class="container-fluid">
         <div id="fb-root"></div>
         <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v4.0"></script>
 
@@ -42,14 +41,15 @@
                 Projekt z przedmiotu Aplikacje Internetowe</br>
                 Marcin Służałek
             </div>
-            <div class="row" style="height:70%">
-                <div class="col-2 bg-light text-dark">
+            <div class="row" style="min-height:70%">
+                <div class="col-12 col-md-4 col-xl-2 bg-light text-dark">
                     <button type="button" class="btn btn-dark btn-block"><a href="element_inercyjny.html">Symulator odpowiedzi skokowej</a></button>
                     <button type="button" class="btn btn-dark btn-block"><a href="grafika_wektorowa.html">Grafika wektorowa</a></button>
                     <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
                     <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
+                    <button type="button" class="btn btn-dark btn-block"><a href="draganddrop.html">Drag & Drop</a></button>
                 </div>
-                <div class="col-8 pre-scrollable" style="max-height:100%">
+                <div class="col-12 col-md-8 col-xl-8 pre-scrollable" style="max-height:100%">
                     <h1>Układ planetarny</h1>
                     <svg width="1000" height="1000">
                         <g>
@@ -82,7 +82,7 @@
                         $$\frac{T^2_1}{a^3_1}=\frac{T^2_2}{a^3_2}$$
                     </div>
                 </div>
-                <div class="col-2 bg-light text-dark">
+                <div class="col-12 col-md-12 col-xl-2 bg-light text-dark text-center">
                     <img src="pp-put_logo_jasne.jpg">
                 </div>
             </div>
@@ -98,7 +98,6 @@
                     </div>
                 </div>
             </div>
-        </div>
 
 </body>
 </html>
