--- a/element_inercyjny.html
+++ b/element_inercyjny.html
@@ -1,8 +1,3 @@
-<body>
-
-</body>
-</html>
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -35,8 +30,8 @@
         Projekt z przedmiotu Aplikacje Internetowe</br>
         Marcin Służałek
     </div>
-    <div class="row" style="height:70%">
-        <div class="col-2">
+    <div class="row" style="min-height:70%">
+        <div class="col-12 col-md-4 col-xl-2">
             <div style="display: flex">
 
                 <div style="display: inline">
@@ -55,9 +50,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-8 pre-scrollable" style="max-height:100%">
+        <div class="col-12 col-md-8 col-xl-8 pre-scrollable" style="max-height:100%">
             <div class="p-3">
-                <canvas id="plot" width="400" height="300">
+                <canvas id="plot" width="100%" height="500">
                 Your browser does not support the canvas element.
                 </canvas>
             </div>
@@ -68,7 +63,7 @@
             $$G(s) = \frac {k}{(sT_1+1)(sT_2+1)}$$
             $$h(t) = k(1-\frac{T_1}{T_1-T_2}e^{-\frac{t}{T_1}}+\frac{T_2}{T_1-T_2}e^{-\frac{t}{T_2}})$$
         </div>
-        <div class="col-2">
+        <div class="col-12 col-md-12 col-xl-2 text-center">
             <img src="pp-put_logo_jasne.jpg">
         </div>
     </div>
@@ -150,37 +145,65 @@
 
             //rysowanie ukladu wspolrzednych
 
-            ctx.beginPath();
-            ctx.moveTo(0,0);
-            ctx.lineTo(0,height);
+            ctx.strokeStyle = "Black";
+
+            ctx.beginPath();                //os Y
+            ctx.moveTo(10,0);
+            ctx.lineTo(10,height);
             ctx.stroke();
 
-            ctx.beginPath();
-            ctx.moveTo(0,height);
-            ctx.lineTo(width,height);
+            ctx.beginPath();                //strzalka Y
+            ctx.moveTo(0,10);
+            ctx.lineTo(10,0);
+            ctx.lineTo(20,10);
             ctx.stroke();
+
+            for(var i = height-30; i > 10; i-=20){
+                ctx.beginPath();            //podzialka Y
+                ctx.moveTo(5,i);
+                ctx.lineTo(15,i);
+                ctx.stroke();
+            }
+
+            ctx.beginPath();                //os X
+            ctx.moveTo(0,height-10);
+            ctx.lineTo(width,height-10);
+            ctx.stroke();
+
+            ctx.beginPath();                //strzalka X
+            ctx.moveTo(width-10,height-20);
+            ctx.lineTo(width,height-10);
+            ctx.lineTo(width-10,height);
+            ctx.stroke();
+
+            for(var i = width-30; i > 10; i-=20){
+                ctx.beginPath();            //podzialka X
+                ctx.moveTo(i,height-5);
+                ctx.lineTo(i,height-15);
+                ctx.stroke();
+            }
 
             //rysowanie inercji 1-szego rzedu
 
-            ctx.moveTo(0,CY(0));
+            ctx.moveTo(10,CY(0));
             ctx.strokeStyle = "Red";
             ctx.beginPath();
 
-            for (var x = 0; x <= width; x += 1) {
+            for (var x = 0; x <= width-20; x += 1) {
                 var y = 100*step_inertia1(x);
-                ctx.lineTo(x,CY(y));
+                ctx.lineTo(x+10,CY(y)-10);
             }
             ctx.stroke();
 
             //rysowanie inercji 2-go rzedu
 
-            ctx.moveTo(0,CY(0));
+            ctx.moveTo(10,CY(0));
             ctx.strokeStyle = "Blue";
             ctx.beginPath();
 
-            for (var x = 0; x <= width; x += 1) {
+            for (var x = 0; x <= width-20; x += 1) {
                 var y = 100*step_inertia2(x);
-                ctx.lineTo(x,CY(y));
+                ctx.lineTo(x+10,CY(y)-10);
             }
             ctx.stroke();
         }
