--- a/grafika_wektorowa.html
+++ b/grafika_wektorowa.html
@@ -1,8 +1,3 @@
-<body>
-
-</body>
-</html>
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -23,7 +18,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<div class="container-fluid">
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v4.0"></script>
 
@@ -38,14 +32,15 @@
         Projekt z przedmiotu Aplikacje Internetowe</br>
         Marcin Służałek
     </div>
-    <div class="row" style="height:70%">
-        <div class="col-2 bg-light text-dark">
+    <div class="row" style="min-height:70%">
+        <div class="col-12 col-md-4 col-xl-2 bg-light text-dark">
             <button type="button" class="btn btn-dark btn-block"><a href="element_inercyjny.html">Symulator odpowiedzi skokowej</a></button>
             <button type="button" class="btn btn-dark btn-block"><a href="grafika_wektorowa.html">Grafika wektorowa</a></button>
             <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
             <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
+            <button type="button" class="btn btn-dark btn-block"><a href="draganddrop.html">Drag & Drop</a></button>
         </div>
-        <div class="col-8 pre-scrollable" style="max-height:100%">
+        <div class="col-12 col-md-8 col-xl-8 pre-scrollable" style="max-height:100%">
             <h1>My first SVG</h1>
             <svg width="1000" height="1000">
                 <polygon points="600,0 600,600 0,600 0,650 650,650 650,0" style="fill:#404040"/>	<!--JP2/Kornicka-->
@@ -69,7 +64,7 @@
                 </rect>
             </svg>
         </div>
-        <div class="col-2 bg-light text-dark">
+        <div class="col-12 col-md-12 col-xl-2 bg-light text-dark text-center">
             <img src="pp-put_logo_jasne.jpg">
         </div>
     </div>
@@ -85,6 +80,5 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
