obsluga cookies posklejana szara tasma - znalezc gwozdzie!

--- a/animacja.html
+++ b/animacja.html
@@ -48,6 +48,7 @@
                     <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
                     <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
                     <button type="button" class="btn btn-dark btn-block"><a href="draganddrop.html">Drag & Drop</a></button>
+                    <button type="button" class="btn btn-dark btn-block"><a href="log_wizyt.html">Log wizyt</a></button>
                 </div>
                 <div class="col-12 col-md-8 col-xl-8 pre-scrollable" style="max-height:100%">
                     <h1>Układ planetarny</h1>
