--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
                 <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
                 <button type="button" class="btn btn-dark btn-block"><a href="draganddrop.html">Drag & Drop</a></button>
+                <button type="button" class="btn btn-dark btn-block"><a href="log_wizyt.html">Log wizyt</a></button>
             </div>
             <div class="col-12 col-md-8 col-xl-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nibh felis, gravida eu mattis nec, posuere interdum libero. Nullam volutpat, quam nec eleifend maximus, massa quam sodales odio, nec molestie ipsum quam ac nisl. Praesent maximus aliquam lorem ut molestie. Morbi nec mattis nulla, vel porta erat. Fusce urna mauris, tristique at suscipit et, faucibus nec nulla. Duis sed est sed purus convallis placerat a semper ligula. Donec rutrum non nulla eget tempus.</p>
