--- a/draganddrop.html
+++ b/draganddrop.html
@@ -83,6 +83,7 @@
                 <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
                 <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
                 <button type="button" class="btn btn-dark btn-block"><a href="draganddrop.html">Drag & Drop</a></button>
+                <button type="button" class="btn btn-dark btn-block"><a href="log_wizyt.html">Log wizyt</a></button>
             </div>
             <div class="col-12 col-md-8 col-xl-8" style="max-height:100%">
                 <div class="root">
