Dzialaja Cookies, rozgrzebany Snake

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
                 <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
                 <button type="button" class="btn btn-dark btn-block"><a href="draganddrop.html">Drag & Drop</a></button>
+                <button type="button" class="btn btn-dark btn-block"><a href="snake.html">Snake</a></button>
                 <button type="button" class="btn btn-dark btn-block"><a href="log_wizyt.html">Log wizyt</a></button>
             </div>
             <div class="col-12 col-md-8 col-xl-8">
@@ -67,4 +68,32 @@
         </div>
     </div>
 </body>
+<script>
+    function getLength() {
+        let data = document.cookie;
+        if(data == "") {
+            return 0;
+        }else{
+            let cl = data.split(';');
+            return cl.length;
+        }
+    }
+    function setCookie() {
+        let name = getLength();
+        let date = new Date();
+        date.setTime(date.getTime());
+        let exp = new Date();
+        exp.setTime(exp.getTime() + (365 * 24 * 60 * 60 * 1000));
+        let expires = "expires="+exp.toUTCString();
+        document.cookie = name + "=" + date + ";" + expires + "domain=localhost;" + "path=/;";
+        console.log(document.cookie);
+    }
+    window.onload = function() {
+        if(!sessionStorage.hasOwnProperty("active")) {
+            setCookie();
+            sessionStorage.setItem("active", "yes");
+        }
+    }
+
+</script>
 </html>
